--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
-    "@nestjs/passport": "^11.0.5",
-    "@nestjs/mongoose": "^11.0.3",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
+    "mongoose": "^8.13.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "mongoose": "^8.13.2",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
@@ -54,6 +54,7 @@
     "@types/node": "^22.10.7",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
