--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^11.2.0",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -51,6 +52,7 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.10.7",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
